k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: note-app
  template:
    metadata:
      labels:
        app: note-app
    spec:
      containers:
        - name: note-app
          image: ghcr.io/ripisopol/note-app:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /app/data          
      volumes:
        - name: data
          hostPath:
            path: /data/kanban
            type: DirectoryOrCreate
