k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: note-app
  namespace: default
spec:
  selector:
    app: note-app
  ports:
    - port: 80
      targetPort: 8000
