k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note-app
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - note.rizalsolihin.my.id
      secretName: note-tls
  rules:
    - host: note.rizalsolihin.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: note-app
                port:
                  number: 80
